--- a/markup/main.css
+++ b/markup/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Montserrat Regular';
-  src: url('./../fonts/Montserrat-Regular.ttf') format('truetype');
+  src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 }
 /* todo Удалить все комментарии */
 :root {
@@ -22,6 +22,8 @@ header {
   height: var(--header-height);
   /* background-color: aqua; */
   display: flex;
+  border-top: 1px solid #cccccc;
+  background: linear-gradient(180deg, rgba(236, 236, 236, 0.9), rgba(196, 196, 196, 0) 50%);
 }
 
 .logo {
