--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,10 @@
   color: #333333;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   height: var(--header-height);
   display: flex;
@@ -62,7 +66,6 @@ main {
   margin: 5px;
   padding: 10px 40px;
   border-radius: 10px;
-  cursor: pointer;
 }
 
 .nav-item-active {
