--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -65,7 +65,7 @@ header {
 	border: 2px solid #999999;
 	padding: 12px;
 	color: #666666;
-	font-size: 16px;
+	font-size: 14px;
   width: 500px;
 }
 
@@ -77,7 +77,7 @@ header {
 	background-color: var(--brand_color);
 	color: #ffffff;
 	cursor: pointer;
-	font-size: 16px;
+	font-size: 14px;
   white-space: nowrap;
 }
 /* Universal styles for forms (end) */
@@ -99,6 +99,7 @@ header {
   flex-shrink: 1;
   font-size: 20px;
   padding-left: 40px;
+  color: var(--brand_color);
 }
 
 main {
@@ -205,6 +206,7 @@ main {
 
 .tasks-filter-is-done-title {
   margin-left: 10px;
+  font-size: 14px;
 }
 
 .tasks-filter-is-done-switcher {
