--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -394,25 +394,23 @@ main {
   align-items: center;
   color: #999999;
   padding: 20px;
-  background-color: darkcyan;
 }
 
 .photo-editor-result-container {
   background-color: white;
   border-radius: var(--border-radius-inner);
-  /* height: 100%; */
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  height: 100%;
   color: #999999;
   padding: 20px;
-  background-color: darkcyan;
+}
+
+.photo-editor-result-items-wrapper {
+  display: flex;
   gap: 10px;
   flex-wrap: wrap;
 }
 
 .photo-editor-result-empty {
-  background-color: salmon;
   height: 100%;
   width: 100%;
   display: flex;
